--- a/src/loginPage.html
+++ b/src/loginPage.html
@@ -1,3 +1,104 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+
+
+
+    <style>
+        .btn btn-light rounded-pill text-primary py-2 px-4 ms-lg-5 {
+            background-color: yellow;
+        }
+
+        #nav3 {
+            width: 100%;
+            width: 1207px;
+            margin: 0 auto;
+        }
+
+        #nav2 {
+            width: 1207px;
+        }
+
+        #Logo {
+            width: 100px;
+            height: 100px;
+        }
+
+        .col-13 {
+            background-color: rgb(0, 133, 126);
+            border-radius: 20px;
+        }
+
+        .col-13:active {
+            border-color: rgb(237, 247, 255);
+            background-color: rgb(174, 207, 175);
+        }
+
+        .character {
+            margin-left: auto;
+            margin-right: auto;
+            display: block;
+        }
+
+        
+    </style>
+
+</head>
+
+<body>
+    <br>
+    <div id="nav3">
+        <div id="nav2">
+            <nav id="nav">
+                <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
+                    <a href="index.html" class="navbar-brand p-0">
+                        <h1 class="m-0" style="font-family: 'hanabold' !important; font-weight: bold;">
+                            <img src="./img/img-hana-symbol.png" alt="Logo" id="Logo">
+                            Hati Library
+                        </h1>
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarCollapse">
+                        <span class="fa fa-bars"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarCollapse">
+                        <div class="navbar-nav ms-auto py-0"
+                            style="font-family: 'hanabold' !important; font-weight: bold;">
+                            <a href="index.html" class="nav-item nav-link active">Home</a>
+                            <a href="about.html" class="nav-item nav-link">도서관 안내</a>
+                            <a href="service.html" class="nav-item nav-link">이용 서비스</a>
+                            <div class="nav-item dropdown">
+                                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                                <div class="dropdown-menu m-0">
+                                    <a href="feature.html" class="dropdown-item">내서재</a>
+                                    <a href="quote.html" class="dropdown-item">Login</a>
+                                    <a href="team.html" class="dropdown-item">Our Team</a>
+                                    <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                                    <a href="404.html" class="dropdown-item">404 Page</a>
+                                </div>
+                            </div>
+                            <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        </div>
+                        <a href="loginPage.html"
+                            class="btn btn-light rounded-pill text-primary py-2 px-4 ms-lg-5">Login</a>
+                    </div>
+                </nav>
+            </nav>
+        </div>
+    </div>
+</body>
+
+</html>
+
+
+<!-- 경계 -->
+
+<br><br><br><br><br>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
@@ -8,47 +109,100 @@
 <div class="container">
     <div class="mx-auto text-center wow fadeInUp" data-wow-delay="0.1s"
         style="max-width: 600px; visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
-        <div class="d-inline-block border rounded-pill text-primary px-4 mb-3">Contact Us</div>
-        <h2 class="mb-5">If You Have Any Query, Please Feel Free Contact Us</h2>
+        <div class="d-inline-block border rounded-pill text-primary px-4 mb-3">LogIn</div>
+        <h2 class="mb-5">책으로 여는 미래, 하나로 나아가는 문 <br> 하티 도서관</h2>
     </div>
+
+    <div>
+        <img class="character" src="./img/starChracter.png" alt="">
+    </div>
+
     <div class="row justify-content-center">
         <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.3s"
             style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
-            <p class="text-center mb-4">The contact form is currently inactive. Get a functional and working contact
+            <!-- <p class="text-center mb-4">The contact form is currently inactive. Get a functional and working contact
                 form with Ajax &amp; PHP in a few minutes. Just copy and paste the files, add a little code and you're
                 done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
-            <form>
-                <div class="row g-3">
-                    <div class="col-md-6">
-                        <div class="form-floating">
-                            <input type="text" class="form-control" id="name" placeholder="Your Name">
-                            <label for="name">Your Name</label>
-                        </div>
+            <form> -->
+            <div class="row g-3">
+                <div class="col-md-6">
+                    <div class="form-floating">
+                        <input type="text" class="form-control" id="name" placeholder="Your Name">
+                        <label for="name">ID</label>
                     </div>
-                    <div class="col-md-6">
-                        <div class="form-floating">
-                            <input type="email" class="form-control" id="email" placeholder="Your Email">
-                            <label for="email">Your Email</label>
-                        </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-floating">
+                        <input type="email" class="form-control" id="email" placeholder="Your Email">
+                        <label for="email">PassWord</label>
                     </div>
-                    <div class="col-12">
-                        <div class="form-floating">
-                            <input type="text" class="form-control" id="subject" placeholder="Subject">
-                            <label for="subject">Subject</label>
-                        </div>
+                </div>
+                <div class="col-12">
+                    <div class="form-floating">
+                        <input type="text" class="form-control" id="subject" placeholder="Subject">
+                        <label for="subject">Email</label>
                     </div>
-                    <div class="col-12">
-                        <div class="form-floating">
+                </div>
+                <div class="col-12">
+                    <!-- <div class="form-floating">
                             <textarea class="form-control" placeholder="Leave a message here" id="message"
                                 style="height: 150px"></textarea>
                             <label for="message">Message</label>
-                        </div>
-                    </div>
-                    <div class="col-12">
-                        <button class="btn btn-primary w-100 py-3" type="submit">Send Message</button>
-                    </div>
+                        </div> -->
                 </div>
+                <div class="col-13">
+                    <button class="btn w-100 py-3" type="submit">Login</button>
+                </div>
+            </div>
             </form>
+        </div>
+    </div>
+</div>
+
+<br><br><br>
+
+<!-- footer -->
+
+<div class="container py-5">
+    <div class="row g-5">
+        <div class="col-md-6 col-lg-3">
+            <h5 class="text-white mb-4">Get In Touch</h5>
+            <p><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
+            <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
+            <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
+            <div class="d-flex pt-2">
+                <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
+                <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
+                <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-instagram"></i></a>
+                <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+            </div>
+        </div>
+        <div class="col-md-6 col-lg-3">
+            <h5 class="text-white mb-4">Quick Link</h5>
+            <a class="btn btn-link" href="">About Us</a>
+            <a class="btn btn-link" href="">Contact Us</a>
+            <a class="btn btn-link" href="">Privacy Policy</a>
+            <a class="btn btn-link" href="">Terms &amp; Condition</a>
+            <a class="btn btn-link" href="">Career</a>
+        </div>
+        <div class="col-md-6 col-lg-3">
+            <h5 class="text-white mb-4">Popular Link</h5>
+            <a class="btn btn-link" href="">About Us</a>
+            <a class="btn btn-link" href="">Contact Us</a>
+            <a class="btn btn-link" href="">Privacy Policy</a>
+            <a class="btn btn-link" href="">Terms &amp; Condition</a>
+            <a class="btn btn-link" href="">Career</a>
+        </div>
+        <div class="col-md-6 col-lg-3">
+            <h5 class="text-white mb-4">Newsletter</h5>
+            <p>Lorem ipsum dolor sit amet elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulpu</p>
+            <div class="position-relative w-100 mt-3">
+                <input class="form-control border-0 rounded-pill w-100 ps-4 pe-5" type="text" placeholder="Your Email"
+                    style="height: 48px;">
+                <button type="button" class="btn shadow-none position-absolute top-0 end-0 mt-1 me-2"><i
+                        class="fa fa-paper-plane text-primary fs-4"></i></button>
+            </div>
         </div>
     </div>
 </div>
