--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,9 @@
 ---
 layout: base
 --- 
+
+{% include mainSearch.html %}
+{% include carousel.html %}
+{% include ex.html %}
+{% include bookRecommand.html %}
+{% include mainCard.html %}
