--- a/src/loginPage.html
+++ b/src/loginPage.html
@@ -1,18 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
+---
+layout: base
+---
 
 
     <style>
-        .btn btn-light rounded-pill text-primary py-2 px-4 ms-lg-5 {
-            background-color: yellow;
-        }
+       
 
         #nav3 {
             width: 100%;
@@ -47,53 +39,6 @@
 
         
     </style>
-
-</head>
-
-<body>
-    <br>
-    <div id="nav3">
-        <div id="nav2">
-            <nav id="nav">
-                <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
-                    <a href="index.html" class="navbar-brand p-0">
-                        <h1 class="m-0" style="font-family: 'hanabold' !important; font-weight: bold;">
-                            <img src="./img/img-hana-symbol.png" alt="Logo" id="Logo">
-                            Hati Library
-                        </h1>
-                    </a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarCollapse">
-                        <span class="fa fa-bars"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarCollapse">
-                        <div class="navbar-nav ms-auto py-0"
-                            style="font-family: 'hanabold' !important; font-weight: bold;">
-                            <a href="index.html" class="nav-item nav-link active">Home</a>
-                            <a href="about.html" class="nav-item nav-link">도서관 안내</a>
-                            <a href="service.html" class="nav-item nav-link">이용 서비스</a>
-                            <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                                <div class="dropdown-menu m-0">
-                                    <a href="feature.html" class="dropdown-item">내서재</a>
-                                    <a href="quote.html" class="dropdown-item">Login</a>
-                                    <a href="team.html" class="dropdown-item">Our Team</a>
-                                    <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                                    <a href="404.html" class="dropdown-item">404 Page</a>
-                                </div>
-                            </div>
-                            <a href="contact.html" class="nav-item nav-link">Contact</a>
-                        </div>
-                        <a href="loginPage.html"
-                            class="btn btn-light rounded-pill text-primary py-2 px-4 ms-lg-5">Login</a>
-                    </div>
-                </nav>
-            </nav>
-        </div>
-    </div>
-</body>
-
-</html>
 
 
 <!-- 경계 -->
@@ -159,50 +104,3 @@
     </div>
 </div>
 
-<br><br><br>
-
-<!-- footer -->
-
-<div class="container py-5">
-    <div class="row g-5">
-        <div class="col-md-6 col-lg-3">
-            <h5 class="text-white mb-4">Get In Touch</h5>
-            <p><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-            <p><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-            <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
-            <div class="d-flex pt-2">
-                <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
-                <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
-                <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-instagram"></i></a>
-                <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
-            </div>
-        </div>
-        <div class="col-md-6 col-lg-3">
-            <h5 class="text-white mb-4">Quick Link</h5>
-            <a class="btn btn-link" href="">About Us</a>
-            <a class="btn btn-link" href="">Contact Us</a>
-            <a class="btn btn-link" href="">Privacy Policy</a>
-            <a class="btn btn-link" href="">Terms &amp; Condition</a>
-            <a class="btn btn-link" href="">Career</a>
-        </div>
-        <div class="col-md-6 col-lg-3">
-            <h5 class="text-white mb-4">Popular Link</h5>
-            <a class="btn btn-link" href="">About Us</a>
-            <a class="btn btn-link" href="">Contact Us</a>
-            <a class="btn btn-link" href="">Privacy Policy</a>
-            <a class="btn btn-link" href="">Terms &amp; Condition</a>
-            <a class="btn btn-link" href="">Career</a>
-        </div>
-        <div class="col-md-6 col-lg-3">
-            <h5 class="text-white mb-4">Newsletter</h5>
-            <p>Lorem ipsum dolor sit amet elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulpu</p>
-            <div class="position-relative w-100 mt-3">
-                <input class="form-control border-0 rounded-pill w-100 ps-4 pe-5" type="text" placeholder="Your Email"
-                    style="height: 48px;">
-                <button type="button" class="btn shadow-none position-absolute top-0 end-0 mt-1 me-2"><i
-                        class="fa fa-paper-plane text-primary fs-4"></i></button>
-            </div>
-        </div>
-    </div>
-</div>
