--- a/src/loginPage.html
+++ b/src/loginPage.html
@@ -3,42 +3,38 @@ layout: base
 ---
 
 
-    <style>
-       
+<style>
+    #nav3 {
+        width: 100%;
+        width: 1207px;
+        margin: 0 auto;
+    }
 
-        #nav3 {
-            width: 100%;
-            width: 1207px;
-            margin: 0 auto;
-        }
+    #nav2 {
+        width: 1207px;
+    }
 
-        #nav2 {
-            width: 1207px;
-        }
+    #Logo {
+        width: 100px;
+        height: 100px;
+    }
 
-        #Logo {
-            width: 100px;
-            height: 100px;
-        }
+    .col-13 {
+        background-color: rgb(0, 133, 126);
+        border-radius: 20px;
+    }
 
-        .col-13 {
-            background-color: rgb(0, 133, 126);
-            border-radius: 20px;
-        }
+    .col-13:active {
+        border-color: rgb(237, 247, 255);
+        background-color: rgb(174, 207, 175);
+    }
 
-        .col-13:active {
-            border-color: rgb(237, 247, 255);
-            background-color: rgb(174, 207, 175);
-        }
-
-        .character {
-            margin-left: auto;
-            margin-right: auto;
-            display: block;
-        }
-
-        
-    </style>
+    .character {
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+    }
+</style>
 
 
 <!-- 경계 -->
@@ -48,8 +44,14 @@ layout: base
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-    crossorigin="anonymous"></script>
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous">
+    function showWelcomeMessage() {
+            alert("환영합니다!");
+    }
+
+
+</script>
+
 
 <div class="container">
     <div class="mx-auto text-center wow fadeInUp" data-wow-delay="0.1s"
@@ -72,20 +74,20 @@ layout: base
             <div class="row g-3">
                 <div class="col-md-6">
                     <div class="form-floating">
-                        <input type="text" class="form-control" id="name" placeholder="Your Name">
-                        <label for="name">ID</label>
+                        <input type="id" class="form-control" id="name" placeholder="Your Name">
+                        <label for="id">ID</label>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="form-floating">
-                        <input type="email" class="form-control" id="email" placeholder="Your Email">
-                        <label for="email">PassWord</label>
+                        <input type="password" class="form-control" id="email" placeholder="Your Email">
+                        <label for="password">PassWord</label>
                     </div>
                 </div>
                 <div class="col-12">
                     <div class="form-floating">
-                        <input type="text" class="form-control" id="subject" placeholder="Subject">
-                        <label for="subject">Email</label>
+                        <input type="email" class="form-control" id="subject" placeholder="Subject">
+                        <label for="email">Email</label>
                     </div>
                 </div>
                 <div class="col-12">
@@ -96,11 +98,10 @@ layout: base
                         </div> -->
                 </div>
                 <div class="col-13">
-                    <button class="btn w-100 py-3" type="submit">Login</button>
+                    <button class="btn w-100 py-3" type="submit" onclick="showWelcomeMessage()">Login</button>
                 </div>
             </div>
             </form>
         </div>
     </div>
 </div>
-
