--- a/src/libraryInfo.html
+++ b/src/libraryInfo.html
@@ -51,13 +51,11 @@ layout: base
                 </div>
                 <div class="col-lg-6 col-md-7 wow fadeInUp" data-wow-delay="0.3s"
                     style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
-                    <h1 class="display-1 text-primary mb-0">25</h1>
-                    <p class="text-primary mb-4">Year of Experience</p>
+                    <p class="text-primary mb-4">Welcome</p>
                     <h1 class="display-5 mb-4">Hati Library</h1>
-                    <p class="mb-4">지속 가능한 미래를 위한 당신의 큰 발걸음. 책속에 세계가 현실로 이루어집니다.
+                    <p class="mb-4">지속 가능한 미래를 위한 당신의 큰 발걸음. 책속에 세계가 현실로 이루어집니다. <br>
                         당신의 상상력을 자유롭게 펼칠 수 있는 곳, 하티 도서관입니다. <br> 당신의 궁금증을 해소하고, 새로운 아이디어를 발견할 수 있습니다. <br>
                         지금, 하티 도서관은 당신을 기다립니다. 함께 알찬 시간을 보내며 세계와 소통해보시겠어요?</p>
-                    <a class="btn btn-primary py-3 px-4" href="">Explore More</a>
                 </div>
                 <div class="col-lg-3 col-md-12 wow fadeInUp" data-wow-delay="0.5s"
                     style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInUp;">
