--- a/src/aboutBook.html
+++ b/src/aboutBook.html
@@ -7,102 +7,123 @@ layout: base
 
 <!-- 부트스트랩 JavaScript 파일 로드 -->
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<style>
+    main {
+        display: flex;
+    }
+</style>
 
 <body>
     <br><br><br><br><br><br><br>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8">
-                <div class="single-article-section">
-                    <div class="single-article-text">
-                        <div class="single-artcile-bg"></div>
-                        <img src="img/book2.png" alt="">
-                        <p class="blog-meta">
-                            <span class="author"><i class="fas fa-user"></i> Admin</span>
-                            <span class="date"><i class="fas fa-calendar"></i> 27 December, 2019</span>
-                        </p>
-                        <h2>메리골드 마음 세탁소</h2>
-                        <br>
-                        <p>마음에 묻은 얼룩을 마법처럼 지워드립니다. <br>
-                        윤정은 작가 문학상 수상 11년 만의 첫 장편소설 <br>
-                        한국형 힐링 소설의 결정판!</p>
-                        <p>
-                        『하고 싶은 대로 살아도 괜찮아』를 비롯해 약 50만 독자들에게 큰 사랑을 받아온 에세이스트 윤정은 작가가 문학상 수상 이후 11년 만에 장편소설 『메리골드 마음 세탁소』를 통해 독자와 만난다. 조용한 마을에
-                        마법처럼 등장한 세탁소를 오가는 사람들의 갖가지 사연과, 속 깊은 대화를 통해 세탁소 주인 ‘지은’의 내면에 찾아오는 변화를 따뜻한 시선으로 그려냈다.
-                        <br> 
-                        가난에 시달려 꿈을 포기한 어린시절, 사랑했던 연인의 배신, 부와 명예에 홀려 놓쳐버린 삶, 학교 폭력으로 인한 상처와 방황, 자식을 위해 몸 바쳐 보낸 청춘 등 우리 각자의 삶을 닮은 이야기가 마음을 울린다. 상처를 인정하고 마음을 열어 보이는 용기와, 이웃의 아픔에
-                        공감하고 상처를 위로하는 따뜻한 마음이 작품 전반에 진하게 녹아 있다.
-                        <br>
-                        이 책 『메리골드 마음 세탁소』는 벼랑 끝에 몰린 것 같은 어느 날, 마음 같은 건 없었으면 좋겠다고 생각되는 그런 날에 숨어들어 상처를 털어낼 수 있는 은신처가 되어줄 것이다.</p>
-                        
-                    </div>
+    <main>
+        <div class="container" style="display: flex;">
+            <div class="row">
+                <div class="col-lg-8">
+                    <div class="single-article-section">
+                        <div class="single-article-text">
+                            <div class="single-artcile-bg"></div>
+                            <img src="img/book2.png" alt="">
+                            <p class="blog-meta">
+                                <span class="author"><i class="fas fa-user"></i> Admin</span>
+                                <span class="date"><i class="fas fa-calendar"></i> 27 December, 2019</span>
+                            </p>
+                            <h2>메리골드 마음 세탁소</h2>
+                            <br>
+                            <p>마음에 묻은 얼룩을 마법처럼 지워드립니다. <br>
+                                윤정은 작가 문학상 수상 11년 만의 첫 장편소설 <br>
+                                한국형 힐링 소설의 결정판!</p>
+                            <p>
+                                『하고 싶은 대로 살아도 괜찮아』를 비롯해 약 50만 독자들에게 큰 사랑을 받아온 에세이스트 윤정은 작가가 문학상 수상 이후 11년 만에 장편소설 『메리골드
+                                마음
+                                세탁소』를 통해 독자와 만난다. 조용한 마을에
+                                마법처럼 등장한 세탁소를 오가는 사람들의 갖가지 사연과, 속 깊은 대화를 통해 세탁소 주인 ‘지은’의 내면에 찾아오는 변화를 따뜻한 시선으로 그려냈다.
+                                <br>
+                                가난에 시달려 꿈을 포기한 어린시절, 사랑했던 연인의 배신, 부와 명예에 홀려 놓쳐버린 삶, 학교 폭력으로 인한 상처와 방황, 자식을 위해 몸 바쳐 보낸 청춘
+                                등
+                                우리 각자의 삶을 닮은 이야기가 마음을 울린다. 상처를 인정하고 마음을 열어 보이는 용기와, 이웃의 아픔에
+                                공감하고 상처를 위로하는 따뜻한 마음이 작품 전반에 진하게 녹아 있다.
+                                <br>
+                                이 책 『메리골드 마음 세탁소』는 벼랑 끝에 몰린 것 같은 어느 날, 마음 같은 건 없었으면 좋겠다고 생각되는 그런 날에 숨어들어 상처를 털어낼 수 있는
+                                은신처가
+                                되어줄 것이다.
+                            </p>
 
-                    <div class="comments-list-wrap">
-                        <br><br><br>
-                        <h3 class="comment-count-title">3 Comments</h3>
-                        <div class="comment-list">
-                            <div class="single-comment-body">
-                                <div class="comment-user-avater">
-                                    <img src="assets/img/avaters/avatar1.png" alt="">
-                                </div>
-                                <div class="comment-text-body">
-                                    <h4>Jenny Joe <span class="comment-date">Aprl 26, 2020</span> <a href="#">reply</a>
-                                    </h4>
-                                    <p>Nunc risus ex, tempus quis purus ac, tempor consequat ex. Vivamus sem magna,
-                                        maximus
-                                        at est id, maximus aliquet nunc. Suspendisse lacinia velit a eros porttitor, in
-                                        interdum ante faucibus Suspendisse lacinia velit a eros porttitor, in interdum
-                                        ante
-                                        faucibus.</p>
-                                </div>
-                                <div class="single-comment-body child">
+                        </div>
+
+                        <div class="comments-list-wrap">
+                            <br><br><br>
+                            <h3 class="comment-count-title">3 Comments</h3>
+                            <div class="comment-list">
+                                <div class="single-comment-body">
                                     <div class="comment-user-avater">
-                                        <img src="assets/img/avaters/avatar3.png" alt="">
+                                        <img src="assets/img/avaters/avatar1.png" alt="">
                                     </div>
                                     <div class="comment-text-body">
-                                        <h4>Simon Soe <span class="comment-date">Aprl 27, 2020</span> <a
+                                        <h4>Jenny Joe <span class="comment-date">Aprl 26, 2020</span> <a
                                                 href="#">reply</a>
                                         </h4>
                                         <p>Nunc risus ex, tempus quis purus ac, tempor consequat ex. Vivamus sem magna,
-                                            maximus at est id, maximus aliquet nunc. Suspendisse lacinia velit a eros
-                                            porttitor, in interdum ante faucibus.</p>
+                                            maximus
+                                            at est id, maximus aliquet nunc. Suspendisse lacinia velit a eros porttitor,
+                                            in
+                                            interdum ante faucibus Suspendisse lacinia velit a eros porttitor, in
+                                            interdum
+                                            ante
+                                            faucibus.</p>
+                                    </div>
+                                    <div class="single-comment-body child">
+                                        <div class="comment-user-avater">
+                                            <img src="assets/img/avaters/avatar3.png" alt="">
+                                        </div>
+                                        <div class="comment-text-body">
+                                            <h4>Simon Soe <span class="comment-date">Aprl 27, 2020</span> <a
+                                                    href="#">reply</a>
+                                            </h4>
+                                            <p>Nunc risus ex, tempus quis purus ac, tempor consequat ex. Vivamus sem
+                                                magna,
+                                                maximus at est id, maximus aliquet nunc. Suspendisse lacinia velit a
+                                                eros
+                                                porttitor, in interdum ante faucibus.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="single-comment-body">
+                                    <div class="comment-user-avater">
+                                        <img src="assets/img/avaters/avatar2.png" alt="">
+                                    </div>
+                                    <div class="comment-text-body">
+                                        <h4>Addy Aoe <span class="comment-date">May 12, 2020</span> <a
+                                                href="#">reply</a>
+                                        </h4>
+                                        <p>Nunc risus ex, tempus quis purus ac, tempor consequat ex. Vivamus sem magna,
+                                            maximus
+                                            at est id, maximus aliquet nunc. Suspendisse lacinia velit a eros porttitor,
+                                            in
+                                            interdum ante faucibus Suspendisse lacinia velit a eros porttitor, in
+                                            interdum
+                                            ante
+                                            faucibus.</p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="single-comment-body">
-                                <div class="comment-user-avater">
-                                    <img src="assets/img/avaters/avatar2.png" alt="">
-                                </div>
-                                <div class="comment-text-body">
-                                    <h4>Addy Aoe <span class="comment-date">May 12, 2020</span> <a href="#">reply</a>
-                                    </h4>
-                                    <p>Nunc risus ex, tempus quis purus ac, tempor consequat ex. Vivamus sem magna,
-                                        maximus
-                                        at est id, maximus aliquet nunc. Suspendisse lacinia velit a eros porttitor, in
-                                        interdum ante faucibus Suspendisse lacinia velit a eros porttitor, in interdum
-                                        ante
-                                        faucibus.</p>
-                                </div>
-                            </div>
+                        </div>
+
+                        <div class="comment-template">
+                            <h4>Leave a comment</h4>
+                            <p>If you have a comment dont feel hesitate to send us your opinion.</p>
+                            <form action="index.html">
+                                <p>
+                                    <input type="text" placeholder="Your Name">
+                                    <input type="email" placeholder="Your Email">
+                                </p>
+                                <p><textarea name="comment" id="comment" cols="30" rows="10"
+                                        placeholder="Your Message"></textarea></p>
+                                <p><input type="submit" value="Submit"></p>
+                            </form>
                         </div>
                     </div>
-
-                    <div class="comment-template">
-                        <h4>Leave a comment</h4>
-                        <p>If you have a comment dont feel hesitate to send us your opinion.</p>
-                        <form action="index.html">
-                            <p>
-                                <input type="text" placeholder="Your Name">
-                                <input type="email" placeholder="Your Email">
-                            </p>
-                            <p><textarea name="comment" id="comment" cols="30" rows="10"
-                                    placeholder="Your Message"></textarea></p>
-                            <p><input type="submit" value="Submit"></p>
-                        </form>
-                    </div>
                 </div>
-            </div>
-            <!-- <div class="col-lg-4">
+                <!-- <div class="col-lg-4">
             <div class="sidebar-section">
                 <div class="recent-posts">
                     <h4>Recent Posts</h4>
@@ -137,6 +158,7 @@ layout: base
                 </div>
             </div>
         </div> -->
+            </div>
         </div>
-    </div>
+    </main>
 </body>
