--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,10 @@
 ---
 layout: base
---- 
+---
 
 {% include mainSearch.html %}
 {% include carousel.html %}
 {% include ex.html %}
-{% include bookRecommand.html %}
-{% include mainCard.html %}
+{% include temp_books.html %}
+{% include temp_service.html %}
+
