--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,5 @@ layout: base
 {% include carousel.html %}
 {% include ex.html %}
 {% include temp_books.html %}
-{% include temp_service.html %}
+{% include temp_services.html %}
 
