--- a/src/loginPage.html
+++ b/src/loginPage.html
@@ -45,63 +45,78 @@ layout: base
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous">
-    function showWelcomeMessage() {
-            alert("환영합니다!");
-    }
-
-
 </script>
 
+<body>
 
-<div class="container">
-    <div class="mx-auto text-center wow fadeInUp" data-wow-delay="0.1s"
-        style="max-width: 600px; visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
-        <div class="d-inline-block border rounded-pill text-primary px-4 mb-3">LogIn</div>
-        <h2 class="mb-5">책으로 여는 미래, 하나로 나아가는 문 <br> 하티 도서관</h2>
-    </div>
+    <div class="container">
+        <div class="mx-auto text-center wow fadeInUp" data-wow-delay="0.1s"
+            style="max-width: 600px; visibility: visible; animation-delay: 0.1s; animation-name: fadeInUp;">
+            <div class="d-inline-block border rounded-pill text-primary px-4 mb-3">LogIn</div>
+            <h2 class="mb-5">책으로 여는 미래, 하나로 나아가는 문 <br> 하티 도서관</h2>
+        </div>
 
-    <div>
-        <img class="character" src="./img/starChracter.png" alt="">
-    </div>
+        <div>
+            <img class="character" src="./img/starChracter.png" alt="">
+        </div>
 
-    <div class="row justify-content-center">
-        <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.3s"
-            style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
-            <!-- <p class="text-center mb-4">The contact form is currently inactive. Get a functional and working contact
+        <div class="row justify-content-center">
+            <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.3s"
+                style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
+                <!-- <p class="text-center mb-4">The contact form is currently inactive. Get a functional and working contact
                 form with Ajax &amp; PHP in a few minutes. Just copy and paste the files, add a little code and you're
                 done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
             <form> -->
-            <div class="row g-3">
-                <div class="col-md-6">
-                    <div class="form-floating">
-                        <input type="id" class="form-control" id="name" placeholder="Your Name">
-                        <label for="id">ID</label>
+                <div class="row g-3">
+                    <div class="col-md-6">
+                        <div class="form-floating">
+                            <input type="id" class="form-control" id="id" placeholder="Your Name">
+                            <label for="id">ID</label>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-floating">
-                        <input type="password" class="form-control" id="email" placeholder="Your Email">
-                        <label for="password">PassWord</label>
+                    <div class="col-md-6">
+                        <div class="form-floating">
+                            <input type="password" class="form-control" id="password" placeholder="Your Email">
+                            <label for="password">PassWord</label>
+                        </div>
                     </div>
-                </div>
-                <div class="col-12">
-                    <div class="form-floating">
-                        <input type="email" class="form-control" id="subject" placeholder="Subject">
-                        <label for="email">Email</label>
+                    <div class="col-12">
+                        <div class="form-floating">
+                            <input type="email" class="form-control" id="subject" placeholder="Subject">
+                            <label for="email">Email</label>
+                        </div>
                     </div>
-                </div>
-                <div class="col-12">
-                    <!-- <div class="form-floating">
+                    <div class="col-12">
+                        <!-- <div class="form-floating">
                             <textarea class="form-control" placeholder="Leave a message here" id="message"
                                 style="height: 150px"></textarea>
                             <label for="message">Message</label>
                         </div> -->
+                    </div>
+                    <div class="col-13">
+                        <button class="btn w-100 py-3" type="submit" onclick="showWelcomeMessage()">Login</button>
+                    </div>
                 </div>
-                <div class="col-13">
-                    <button class="btn w-100 py-3" type="submit" onclick="showWelcomeMessage()">Login</button>
-                </div>
+                </form>
             </div>
-            </form>
         </div>
     </div>
-</div>
+
+
+    <head>
+    <script>
+        function showWelcomeMessage() {
+            var id = document.getElementById('id').value;
+            var password = document.getElementById('password').value;
+
+            // 이 부분에서 실제로 로그인 기능을 구현합니다.
+            // 여기서는 간단히 입력한 ID와 비밀번호를 확인하는 예시를 보여줍니다.
+
+            if (id === 'admin' && password === 'password') {
+                alert('환영합니다!'); // 로그인 성공 시 환영 메시지를 띄웁니다.
+            } else {
+                alert('ID나 비밀번호가 잘못되었습니다. 다시 시도해주세요.'); // 로그인 실패 시 에러 메시지를 띄웁니다.
+            }
+        }
+    </script>
+    </head>
